<resources>
    <string name="loading_text">Loading...</string>
    <string name="app_version_code">app_version_code</string>
    <string name="app_default_mobile_number_length">10</string>
    <string name="app_default_android_text">Android</string>
    <string name="app_default_alert_positive_button_confirm_text">Confirm</string>
    <string name="app_default_alert_refresh_button_text">Refresh</string>
    <string name="app_default_alert_positive_button_yes_text">Yes</string>
    <string name="app_default_alert_negative_button_cancel_text">Cancel</string>
    <string name="app_default_alert_negative_button_exit_text">Exit</string>
    <string name="app_default_alert_negative_button_ok_text">Ok</string>
    <string name="app_default_alert_negative_button_skip_text">Skip</string>
    <string name="app_default_alert_negative_button_done_text">Done</string>
    <string name="app_default_alert_negative_button_no_text">No</string>
    <string name="app_default_alert_title_info">Info</string>
    <string name="app_default_alert_title_choose_action">Choose Action</string>
    <string name="app_local_edit_alert">Edit Scroll Text</string>
    <string name="app_local_update_alert">Update</string>
    <string name="app_default_intent_action_text">intentAction</string>
    <string name="app_default_error_code_text">errorCode</string>
    <string name="app_default_error_msg_text">errorMsg</string>
    <string name="app_default_success_msg_text">success_msg</string>
    <string name="app_default_success_code_text">success_code</string>
    <string name="app_default_proceed_text">Proceed</string>
    <string name="app_default_flag_text">flag</string>
    <string name="app_default_result_text">result</string>
    <string name="date_format_hours">yyyy-MM-dd HH</string>
    <string name="schedule_layout_expiry_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="get_required_files_immediately">get_required_files_immediately</string>
    <string name="app_default_video_name">Video</string>
    <string name="app_default_image_name">Image</string>
    <string name="app_default_txt_name">Text</string>
    <string name="app_default_url_name">url</string>
    <string name="app_default_multi_region">multi_region</string>
    <string name="app_default_file_name">File</string>
    <string name="app_default_rss_name">rss</string>
    <string name="app_default_excel_file_name">Excel</string>
    <string name="app_default_get_video_text">video/*</string>
    <string name="app_default_date_time_layout_time_et_hint">Select time</string>
    <string name="app_default_date_time_layout_date_hint">Select date</string>
    <string name="app_default_date_time_layout_header">Date And Time Picker</string>
    <string name="app_default_media_file_text">media</string>
    <string name="app_default_layout_file_text">layout</string>
    <string name="app_default_local_text">Local</string>
    <string name="app_default_action_settings">Settings</string>
    <string name="app_default_update_action_button_tv">Update</string>
    <string name="unable_to_save_settings"> Unable to save settings</string>
    <string name="success">Success</string>
    <string name="save_settings_success">Settings have been saved successfully</string>
    <string name="app_default_contact_info"> Please Contact 9900819475/contact@adskite.com</string>
    <string name="no_internet">No Internet Found, Please Check.</string>
    <string name="app_default_update_success_mssg">Updated Successfully</string>
    <string name="app_name">NGL Player</string>
    <string name="adskite_digi_directory">SignageServ</string>
    <string name="user_details_sp">user_details_sp</string>
    <string name="playing_media_mode">playing_media_mode</string>
    <string name="default_image_duration">default_image_duration</string>
    <string name="default_report_image_duration">default_report_image_duration</string>
    <string name="playing_folder_path">playing_folder_path</string>
    <string name="playing_local_content_mode">playing_local_content_mode</string>
    <string name="playing_default_image_path">playing_default_image_path</string>
    <string name="sp_hard_ware_key">hard_ware_key</string>
    <string name="sp_device_name">device_name</string>
    <string name="sp_display_details">display_details</string>
    <string name="sp_display_time_stamp">sp_display_time_stamp</string>
    <string name="sp_register_status">register_status</string>
    <string name="sp_local_scroll_text">sp_local_scroll_text</string>
    <string name="sp_signage_mgr_access">sp_signage_mgr_access</string>
    <string name="last_played_schedule_Media_id">last_played_schedule_Media_id</string>
    <string name="last_played_schedule_Media_stop_position">last_played_schedule_Media_stop_position</string>
    <string name="user_mobile_number">user_mobile_number</string>
    <string name="user_display_name">user_display_name</string>
    <string name="user_display_org_email">user_display_org_email</string>
    <string name="user_display_location_desc">user_display_location_desc</string>
    <string name="user_display_location_lat">user_display_location_lat</string>
    <string name="user_display_location_lng">user_display_location_lng</string>
    <string name="can_update_location_bg_sp">can_update_location_bg_sp</string>
    <string name="local_scroll_text">local_scroll_text</string>
    <string name="local_scroll_text_style_id">local_scroll_text_style_id</string>
    <string name="local_scroll_text_italic">local_scroll_text_italic</string>
    <string name="local_scroll_text_bold">local_scroll_text_bold</string>
    <string name="scroll_text_text_size">scroll_text_text_size</string>
    <string name="scroll_text_text_color">scroll_text_text_color</string>
    <string name="scroll_text_bg_color">scroll_text_bg_color</string>
    <string name="scroll_text_updated_at">scroll_text_updated_at</string>
    <string name="local_media_scroll_text">local_media_scroll_text</string>
    <string name="local_scroll_text_mode">local_scroll_text_mode</string>
    <string name="is_scrolling_text_on">is_scrolling_text_on</string>
    <string name="is_signage_mgr_access_on">is_signage_mgr_access_on</string>
    <string name="is_enterprise_signage_mgr_access_on">is_enterprise_signage_mgr_access_on</string>
    <string name="signage_mgr_access_service_id">signage_mgr_access_service_id</string>
    <string name="sync_time_sp">sync_time_sp</string>
    <string name="screen_orientation_sp">screen_orientation_sp</string>
    <string name="auto_restart_on_reboot">auto_restart_on_reboot</string>
    <string name="play_campaign_on_reboot_once_sp">play_campaign_on_reboot_once_sp</string>
    <string name="overlaying_image_setting_info">overlaying_image_setting_info</string>
    <string name="is_overlaying_image_on">is_overlaying_image_on</string>
    <string name="user_display_created_time">user_display_created_time</string>
    <string name="is_hot_spot_enable_always">is_hot_spot_enable_always</string>
    <string name="image_capture_duration">image_capture_duration</string>
    <string name="is_metrics_on">is_metrics_on</string>
    <string name="metrics_camera_type">metrics_camera_type</string>
    <string name="is_auto_download_campaign">is_auto_download_campaign</string>
    <string name="auto_campaign_download_duration">auto_campaign_download_duration</string>
    <string name="reports_sp">reports_sp</string>
    <string name="skip_all_sp">skip_all_sp</string>
    <string name="last_campaign_reports_upload_time">last_campaign_reports_upload_time</string>
    <string name="player_statistics_collection">player_statistics_collection</string>
    <string name="player_statistics_collection_duration">player_statistics_collection_duration</string>
    <string name="iot_device_details_sp">iot_device_details_sp</string>
    <string name="iot">iot</string>
    <string name="iot_key">iot_key</string>
    <string name="display_ready">0</string>
    <string name="display_waiting">2</string>
    <string name="display_added">1</string>
    <string name="no_internet_error_code">00</string>
    <string name="internal_server_error_code">01</string>
    <string name="not_licensed_device_error_code">02</string>
    <string name="not_licensed_approved_error_code">03</string>
    <string name="display_ads_media_info_not_found_error_code">04</string>
    <string name="display_ads_media_no_more_schedule_layout_error_code">05</string>
    <string name="display_ads_media_expired_schedule_layout_error_code">06</string>
    <string name="display_ads_media_same_schedule_layout_error_code">07</string>
    <string name="display_ads_media_skip_schedule_layout_error_code">08</string>
    <string name="display_out_off_memory_error_code">09</string>
    <string name="no_internet_connection_error_msg">No internet connection</string>
    <string name="internal_server_error_msg">Internal server error</string>
    <string name="display_ads_media_info_not_found_error_msg">Media info not found</string>
    <string name="display_ads_media_no_more_schedule_layout_error_msg">No schedule layouts found</string>
    <string name="display_ads_media_skip_schedule_layout_error_msg">Skip schedule layout</string>
    <string name="display_ads_media_expired_schedule_layout_error_msg">Invalid/Expired schedule</string>
    <string name="display_ads_media_same_schedule_layout_error_msg">Same schedule</string>
    <string name="wrong_error_message">Something went wrong, try again after some time</string>
    <string name="no_internet_connection_info_msg">No internet connection,Unable to connect with server,would you like to play local schedules</string>
    <string name="internal_server_error_info_msg">Internal server error,Unable to connect with server,would you like to play local schedules</string>
    <string name="register_layout_header_text">Register to NGL Player</string>
    <string name="register_layout_org_email_edit_text_hint">Enter Email Address</string>
    <string name="register_layout_mobile_number_edit_text_hint">Enter Mobile Number</string>
    <string name="register_layout_register_button_text">Register</string>
    <string name="register_layout_path_edit_text_hint">Select Folder Path</string>
    <string name="register_layout_display_name_edit_text_hint">Enter Display Name</string>
    <string name="register_layout_location_display_info_edit_text_hint">Enter Location Description</string>
    <string name="register_layout_user_email_edit_text_hint">Enter Registered GC User Email</string>
    <string name="register_layout_pwd_edit_text_hint">Enter Password</string>
    <string name="register_layout_is_adskite_text_hint">AdsKite Admin</string>
    <string name="register_layout_ak_admin_pwd_edit_text_hint">Enter AdsKite Admin Password</string>
    <string name="signage_mgr_access_settings_service_id_hint">Enter Account Service Id</string>
    <string name="set_boot_time_settings_text">Set BootUp Time for Media</string>
    <string name="select_screen_orientation_text">Select Screen Orientation</string>
    <string name="select_accessibility_settings">Accessibility Service</string>
    <string name="set_auto_restart_on_reboot">Set Auto Restart on Reboot</string>
    <string name="set_play_campaign_on_reboot_only_once">Set Play Campaign on ReBoot Only Once</string>
    <string name="other_app_launcher_settings_text">Set Other App Launch Setting</string>
    <string name="always_enable_hot_spot">Always Enable Hot Spot</string>
    <string name="gc_login_page_title">Please Sign In</string>
    <string name="gc_user_email_hint">Email Address</string>
    <string name="gc_user_password_hint">Password</string>
    <string name="gc_login_forget_password">Forgot Password?</string>
    <string name="gc_new_user_string">New user?</string>
    <string name="gc_create_new_user_account">Create new account</string>
    <string name="gc_user_login_string">LogIn</string>
    <string name="green_content_cms">Green Content CMS</string>
</resources>