<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_default_layout__background_colour"
    android:layout_margin="@dimen/activity_default_margin"
    >

    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">

     <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:textStyle="bold"
       android:layout_marginTop="@dimen/app_default_vertical_space"
       android:layout_marginBottom="@dimen/app_default_vertical_space"
       android:textSize="@dimen/app_default_text_view_text_size"
       android:textColor="@color/app_default_header_text_color"
       android:text="@string/register_layout_header_text"
     />

     <EditText
            android:id="@+id/register_layout_org_email_et"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/app_default_edit_text_height"
            android:layout_margin="@dimen/app_default_edit_text_margin"
            android:layout_marginTop="@dimen/app_default_vertical_space"
            android:layout_marginBottom="@dimen/app_default_vertical_space"
            android:paddingLeft="@dimen/app_default_edit_text_horizontal_padding"
            android:background="@drawable/edit_text_focused"
            android:hint="@string/register_layout_org_email_edit_text_hint"
            android:textColorHint="@color/app_default_edit_text_hint_color"
            android:textColor="@color/app_default_text_color"
            android:inputType="textEmailAddress" />

     <EditText
        android:id="@+id/register_layout_mobile_number_et"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/app_default_edit_text_height"
        android:layout_margin="@dimen/app_default_edit_text_margin"
        android:layout_marginTop="@dimen/app_default_vertical_space"
        android:layout_marginBottom="@dimen/app_default_vertical_space"
        android:paddingLeft="@dimen/app_default_edit_text_horizontal_padding"
        android:maxLength="@string/app_default_mobile_number_length"
        android:background="@drawable/edit_text_focused"
        android:hint="@string/register_layout_mobile_number_edit_text_hint"
        android:textColorHint="@color/app_default_edit_text_hint_color"
        android:textColor="@color/app_default_text_color"
        android:inputType="number"
       />

    <EditText
        android:id="@+id/register_layout_display_name_et"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/app_default_edit_text_height"
        android:layout_margin="@dimen/app_default_edit_text_margin"
        android:layout_marginTop="@dimen/app_default_vertical_space"
        android:layout_marginBottom="@dimen/app_default_vertical_space"
        android:paddingLeft="@dimen/app_default_edit_text_horizontal_padding"
        android:background="@drawable/edit_text_focused"
        android:hint="@string/register_layout_display_name_edit_text_hint"
        android:textColorHint="@color/app_default_edit_text_hint_color"
        android:textColor="@color/app_default_text_color"
    />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
    <EditText
        android:id="@+id/register_layout_display_location_info_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_default_edit_text_margin"
        android:layout_marginTop="@dimen/app_default_vertical_space"
        android:layout_marginBottom="@dimen/app_default_vertical_space"
        android:paddingLeft="@dimen/app_default_edit_text_horizontal_padding"
        android:background="@drawable/edit_text_focused"
        android:hint="@string/register_layout_location_display_info_edit_text_hint"
        android:textColorHint="@color/app_default_edit_text_hint_color"
        android:textColor="@color/app_default_text_color"
        android:layout_weight="0.75"
        android:minLines="4"
    />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_map"
                android:id="@+id/search_location_button"/>

        </LinearLayout>

      <Button
       android:id="@+id/register_layout_register_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/register_layout_register_button_text"
       android:textColor="@color/app_default_button_text_color"
       android:layout_marginTop="@dimen/app_default_vertical_space"
       android:layout_marginBottom="@dimen/app_default_vertical_space"
       android:layout_gravity="center"
       android:textStyle="bold"
       android:background="@drawable/button_background"
       />
    </LinearLayout>

</ScrollView>