<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/time_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_margin="@dimen/activity_default_margin"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/set_boot_time_settings_text" />

    <Switch
        android:id="@+id/auto_restart_on_reboot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_margin="@dimen/activity_default_margin"
        android:text="@string/set_auto_restart_on_reboot"
        />
    <Switch
        android:id="@+id/play_campaign_on_reboot_only_once"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_margin="@dimen/activity_default_margin"
        android:text="@string/set_play_campaign_on_reboot_only_once" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_default_margin">

        <TextView
            android:id="@+id/orientation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/select_screen_orientation_text"
            android:textSize="@dimen/app_default_text_view_text_size"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Spinner
            android:id="@+id/screen_orientation_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/orientation_tv"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_default_margin">

        <TextView
            android:id="@+id/hotspot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/always_enable_hot_spot"
            android:textSize="@dimen/app_default_text_view_text_size"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <Switch
            android:id="@+id/enable_hotspot_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/hotspot_tv" />

    </RelativeLayout>

    <TextView
        android:id="@+id/accessibility_sett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_default_margin"
        android:text="@string/select_accessibility_settings"
        android:textSize="@dimen/app_default_text_view_text_size"
        android:textAppearance="@android:style/TextAppearance.Medium"/>


    <Switch
        android:id="@+id/app_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginLeft="@dimen/activity_default_margin"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/other_app_launcher_settings_text" />

<android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/app_launcher_layout">

            <Button
                android:id="@+id/choose_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose App"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_default_margin"
                android:layout_centerVertical="true"
                android:minLines="2"
                android:background="@drawable/white_rectangle_orange_line"
                android:layout_toLeftOf="@+id/choose_btn"
                android:maxLines="3"/>
        </RelativeLayout>
</android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>