<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green_content_cms"
        android:textStyle="bold"
        android:background="@color/green"
        android:textColor="@color/white_color"
        android:layout_gravity="center"
        android:gravity="left"
        android:padding="10dp"
        android:textSize="@dimen/app_default_text_view_header_size"/>

 <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/app_default_button_text_color">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_default_text_view_header_size"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black_color"
            android:text="@string/gc_login_page_title"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/gc_login_symbol"/>


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_edittext"
            android:layout_toRightOf="@+id/password_text"
            android:layout_margin="15dp"
            android:layout_below="@+id/login_text"
            android:hint="@string/gc_user_email_hint"
            android:layout_alignParentRight="true"/>

        <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_below="@+id/email_et"
                android:layout_toRightOf="@+id/password_text"
                android:hint="@string/gc_user_password_hint"
                android:layout_alignParentRight="true"/>


        <LinearLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:max="100"
                android:min="0"
                android:backgroundTint="@color/white_color"
                android:indeterminateTint="@color/green" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black_color"
                android:text="Pleas Wait..."/>

        </LinearLayout>


        <Button
            android:id="@+id/forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/app_service_name_text_clr"
            android:text="@string/gc_login_forget_password"/>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gc_user_login_string"
            android:background="@color/green"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:textSize="@dimen/display_files_text_view_text_size"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/white_color"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/create_new_btn"
                android:text="@string/gc_new_user_string"/>

            <Button
                android:id="@+id/create_new_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textColor="@color/app_service_name_text_clr"
                android:text="@string/gc_create_new_user_account"/>

</RelativeLayout>
</LinearLayout>

 </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>