<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/signage_mgr_service_id_info_layout"
        android:background="#ece7e4">

        <EditText
            android:id="@+id/service_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_focused"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:minLines="2"
            android:paddingLeft="5dp"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="#ad000000"
            android:layout_margin="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/signage_mgr_access_settings_service_id_hint"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_id"
            android:id="@+id/cancel"
            android:layout_toLeftOf="@+id/update_service_id"
            android:layout_margin="@dimen/activity_default_margin"
            android:textColor="@color/app_default_button_text_color"
            android:background="@drawable/button_background"
            android:text="@string/app_default_alert_negative_button_cancel_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_id"
            android:id="@+id/update_service_id"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/activity_default_margin"
            android:textColor="@color/app_default_button_text_color"
            android:background="@drawable/button_background"
            android:text="@string/app_default_update_action_button_tv"/>
    </RelativeLayout>
</LinearLayout>